# 2.03.06 (42502) Jul 20, 2010
7/20/10 #2236, implement 3-grid approach for bar magnet B-field
7/20/10 #2236, increase the intensity of compass needles just outside ends of magnet to improve the B-field "look"
7/19/10 #2438, use Shapes for collision detection, define compass bounds as a circle
7/19/10 #2236, increase range of view scaling parameters to [1...1000].
7/19/10 #2236, collapse class hierachy, pull up NumericalBarMagnet into BarMagnet
# 2.03.05 (42426) Jul 19, 2010
7/19/10 dev version to demonstrate scaling of B-field intensity in the view
7/16/10 #2236, add B-field intensity scaling to view, with developer control
7/16/10 move ElectronPathDescriptor to view package 
7/16/10 #2236, delete old dipole magnet model (DipoleMagnet)
7/16/10 #2236, simplify and rename magnet interface
7/16/10 #2236, remove B-field scaling from model
7/16/10 #2236, "distance exponent" from magnet interfaces (not needed for bar magnet, set to 3 for coil magnet)
7/16/10 #2236, remove "inside/outside plane of magnet" fix that is no longer needed (see #424)
7/16/10 #2236, make Turbine extend BarMagnet
7/16/10 #2236, refactor duplicate code into base class for handling magnet translation and rotation
# 2.03.04 (42283) Jul 14, 2010
7/14/10 see #2236, dev version to discuss progress on grid-file model for bar magnet
7/14/10 #2236, add interpolation to grid-file model for bar magnet
7/14/10 #2236, first pass at grid-file model for bar magnet
7/14/10 #2236, remove developer controls related to dipole magnet model, since we're replacing it
# 2.03.03 (42186) Jul 12, 2010
7/12/10 dev version before starting major changes on dipole model
7/12/10 #2236, cleanup DiploleMagnet before I start major changes: remove dead code, fix comments to reflect reality 
7/7/10 test app for Mike Dubson's new numerical dipole model
# 2.03.02 (39630) Apr 5, 2010
4/5/10 dev version for Mike Dubson to test
4/5/10 #2236, add developer control for "B-field inside/outside transition factor"